kubernetes/apps/talos1018/network/gateway-api/config/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: "${IPV6_PREFIX_GUA}:5:2000:0:6:16,10.18.6.16"
    labels:
      service.kubernetes.io/topology: external
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-internal
      hostname: "*.${CLUSTER_DOMAIN}"
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: gateway-internal-tls-v2
      allowedRoutes:
        namespaces:
          from: All
    - name: https-external
      hostname: "*.${DOMAIN}"
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: gateway-external-tls-v2
      allowedRoutes:
        namespaces:
          from: All
    - name: ssh
      protocol: TCP
      port: 22
      allowedRoutes:
        namespaces:
          from: All
